src/App.css
body {
    background: linear-gradient(#FFFFFF 20%, #FFC9E9 80%);
    margin: 0;
    padding: 0;

}

.container {
    min-height: 100vh;
    display: flex;
    flex-direction: column;

}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 40px;

}

.model-selector {
    display: flex;
    align-items: center;
    gap: 5px;
    color: black;
    background-color: white;
    border: solid 3px #EC407A;
    border-radius: 30px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    font-weight: 600;
    font-size: 8pt;
    cursor: pointer;

}

.model-selector:hover {
    background-color: #FFC9E9;
}

.img {
    width: 20px;
}

.message-area {
    flex-grow: 1;
    overflow: hidden;
}

.bottom {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 0;
    margin-bottom: 20px;

}

.person-icon {
    width: 100px;
    padding: 0;

}

h3 {
    margin-top: 0;
    background: linear-gradient(50deg, #000000 0%, #EC407A 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: x-large;
    font-weight: 500;
    font-family: Verdana, Geneva, Tahoma, sans-serif;

}

#input {
    background-color: #FFFFFF;
    border: none;
    width: 90%;
    height: 90%;
    color: black;
    font-size: 16px;
    outline: none;
}

#input:focus {
    border: none;
}

.input {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: white;
    border-radius: 20px;
    width: 70%;
    border: solid 3px #EC407A;
    padding: 15px;
    gap: 10px;
}

.input-icon {
    width: 30px;
    height: 30px;
}

.input-btn {
    background-color: #FFFFFF;
    border-radius: 50px;
    border-bottom: solid 2px #FFFFFF;
    border-top: none;
    border-right: none;
    border-left: none;
    cursor: pointer;
}

.input-btn:hover {
    border-color: #EC407A;
}

@media (max-width: 900px) {
    .model-selector {
        width: 80 px;
        gap: 3px;
        margin-top: 80 px;
        padding-left: 8px;
        padding-right: 8px;
        padding-top: 6px;
        padding-bottom: 2px;
        font-size: 8pt;

    }

    .img {
        width: 15px;
    }

    .bottom {
        gap: 0;


    }

    .person-icon {
        width: 80px;
        padding: 0;

    }

    h3 {
        margin-top: 0;
        font-size: large;
        padding: 6px;

    }

    #input {
        width: 90%;
        height: 90%;
        padding: 10px;
        font-size: medium;

    }

    .input {
        padding: 8px 12px;
        width: 80%;
        gap: 10px;
        padding: 10px;
    }

    .input-icon {
        width: 25px;
        height: 25px;
    }
}

